#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([mdsword], [1.0], [lezhifesker@icloud.com])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lGL':
AC_CHECK_LIB([GL], [main])
# FIXME: Replace `main' with a function in `-lRockeyARM':
AC_CHECK_LIB([RockeyARM], [main])
# FIXME: Replace `main' with a function in `-lavcodec':
AC_CHECK_LIB([avcodec], [main])
# FIXME: Replace `main' with a function in `-lavdevice':
AC_CHECK_LIB([avdevice], [main])
# FIXME: Replace `main' with a function in `-lavfilter':
AC_CHECK_LIB([avfilter], [main])
# FIXME: Replace `main' with a function in `-lavformat':
AC_CHECK_LIB([avformat], [main])
# FIXME: Replace `main' with a function in `-lavutil':
AC_CHECK_LIB([avutil], [main])
# FIXME: Replace `main' with a function in `-ldlib':
AC_CHECK_LIB([dlib], [main])
# FIXME: Replace `main' with a function in `-lgdal':
AC_CHECK_LIB([gdal], [main])
# FIXME: Replace `main' with a function in `-lglut':
AC_CHECK_LIB([glut], [main])
# FIXME: Replace `main' with a function in `-lmauto':
AC_CHECK_LIB([mauto], [main])
# FIXME: Replace `main' with a function in `-lnet':
AC_CHECK_LIB([net], [main])
# FIXME: Replace `main' with a function in `-lopencv_aruco':
AC_CHECK_LIB([opencv_aruco], [main])
# FIXME: Replace `main' with a function in `-lopencv_bgsegm':
AC_CHECK_LIB([opencv_bgsegm], [main])
# FIXME: Replace `main' with a function in `-lopencv_bioinspired':
AC_CHECK_LIB([opencv_bioinspired], [main])
# FIXME: Replace `main' with a function in `-lopencv_calib3d':
AC_CHECK_LIB([opencv_calib3d], [main])
# FIXME: Replace `main' with a function in `-lopencv_ccalib':
AC_CHECK_LIB([opencv_ccalib], [main])
# FIXME: Replace `main' with a function in `-lopencv_core':
AC_CHECK_LIB([opencv_core], [main])
# FIXME: Replace `main' with a function in `-lopencv_cvv':
AC_CHECK_LIB([opencv_cvv], [main])
# FIXME: Replace `main' with a function in `-lopencv_datasets':
AC_CHECK_LIB([opencv_datasets], [main])
# FIXME: Replace `main' with a function in `-lopencv_dpm':
AC_CHECK_LIB([opencv_dpm], [main])
# FIXME: Replace `main' with a function in `-lopencv_face':
AC_CHECK_LIB([opencv_face], [main])
# FIXME: Replace `main' with a function in `-lopencv_features2d':
AC_CHECK_LIB([opencv_features2d], [main])
# FIXME: Replace `main' with a function in `-lopencv_flann':
AC_CHECK_LIB([opencv_flann], [main])
# FIXME: Replace `main' with a function in `-lopencv_freetype':
AC_CHECK_LIB([opencv_freetype], [main])
# FIXME: Replace `main' with a function in `-lopencv_fuzzy':
AC_CHECK_LIB([opencv_fuzzy], [main])
# FIXME: Replace `main' with a function in `-lopencv_hdf':
AC_CHECK_LIB([opencv_hdf], [main])
# FIXME: Replace `main' with a function in `-lopencv_hfs':
AC_CHECK_LIB([opencv_hfs], [main])
# FIXME: Replace `main' with a function in `-lopencv_highgui':
AC_CHECK_LIB([opencv_highgui], [main])
# FIXME: Replace `main' with a function in `-lopencv_img_hash':
AC_CHECK_LIB([opencv_img_hash], [main])
# FIXME: Replace `main' with a function in `-lopencv_imgcodecs':
AC_CHECK_LIB([opencv_imgcodecs], [main])
# FIXME: Replace `main' with a function in `-lopencv_imgproc':
AC_CHECK_LIB([opencv_imgproc], [main])
# FIXME: Replace `main' with a function in `-lopencv_line_descriptor':
AC_CHECK_LIB([opencv_line_descriptor], [main])
# FIXME: Replace `main' with a function in `-lopencv_ml':
AC_CHECK_LIB([opencv_ml], [main])
# FIXME: Replace `main' with a function in `-lopencv_objdetect':
AC_CHECK_LIB([opencv_objdetect], [main])
# FIXME: Replace `main' with a function in `-lopencv_optflow':
AC_CHECK_LIB([opencv_optflow], [main])
# FIXME: Replace `main' with a function in `-lopencv_phase_unwrapping':
AC_CHECK_LIB([opencv_phase_unwrapping], [main])
# FIXME: Replace `main' with a function in `-lopencv_photo':
AC_CHECK_LIB([opencv_photo], [main])
# FIXME: Replace `main' with a function in `-lopencv_plot':
AC_CHECK_LIB([opencv_plot], [main])
# FIXME: Replace `main' with a function in `-lopencv_reg':
AC_CHECK_LIB([opencv_reg], [main])
# FIXME: Replace `main' with a function in `-lopencv_rgbd':
AC_CHECK_LIB([opencv_rgbd], [main])
# FIXME: Replace `main' with a function in `-lopencv_saliency':
AC_CHECK_LIB([opencv_saliency], [main])
# FIXME: Replace `main' with a function in `-lopencv_shape':
AC_CHECK_LIB([opencv_shape], [main])
# FIXME: Replace `main' with a function in `-lopencv_stereo':
AC_CHECK_LIB([opencv_stereo], [main])
# FIXME: Replace `main' with a function in `-lopencv_stitching':
AC_CHECK_LIB([opencv_stitching], [main])
# FIXME: Replace `main' with a function in `-lopencv_structured_light':
AC_CHECK_LIB([opencv_structured_light], [main])
# FIXME: Replace `main' with a function in `-lopencv_superres':
AC_CHECK_LIB([opencv_superres], [main])
# FIXME: Replace `main' with a function in `-lopencv_surface_matching':
AC_CHECK_LIB([opencv_surface_matching], [main])
# FIXME: Replace `main' with a function in `-lopencv_tracking':
AC_CHECK_LIB([opencv_tracking], [main])
# FIXME: Replace `main' with a function in `-lopencv_video':
AC_CHECK_LIB([opencv_video], [main])
# FIXME: Replace `main' with a function in `-lopencv_videoio':
AC_CHECK_LIB([opencv_videoio], [main])
# FIXME: Replace `main' with a function in `-lopencv_videostab':
AC_CHECK_LIB([opencv_videostab], [main])
# FIXME: Replace `main' with a function in `-lopencv_ximgproc':
AC_CHECK_LIB([opencv_ximgproc], [main])
# FIXME: Replace `main' with a function in `-lopencv_xobjdetect':
AC_CHECK_LIB([opencv_xobjdetect], [main])
# FIXME: Replace `main' with a function in `-lopencv_xphoto':
AC_CHECK_LIB([opencv_xphoto], [main])
# FIXME: Replace `main' with a function in `-lpcap':
AC_CHECK_LIB([pcap], [main])
# FIXME: Replace `main' with a function in `-lpng':
AC_CHECK_LIB([png], [main])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])
# FIXME: Replace `main' with a function in `-lswscale':
AC_CHECK_LIB([swscale], [main])
AC_PROG_RANLIB

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h inttypes.h netdb.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_CHECK_FUNCS([bzero gethostbyname gettimeofday inet_ntoa isascii memmove memset mkdir regcomp select setenv socket strerror strpbrk strrchr strstr])

AC_CONFIG_FILES([Makefile
                 libcommons/Makefile
                 module/Makefile
                 test/Makefile
                 test/example/Makefile
                 test/ffmpeg/Makefile
                 test/lepoll/Makefile
                 test/network/Makefile
                 test/pcap/Makefile
                 test/tesetcase/Makefile
                 test/tracking/Makefile])
AC_OUTPUT
